chore: atualizacoes para catalogo pet

--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@ h1{
 }
 
 :root{
-  --orange: #f5941D;
-  --purple: #28287c;
-  --pink: #cb145b;
+  --orange: #F78F57;
+  --purple: #F78F57;
+  --pink: #78F757;
 }
 
 a{
